--- a/app/src/main/res/layout/activity_tabbed_events.xml
+++ b/app/src/main/res/layout/activity_tabbed_events.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -7,7 +9,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".TabbedEvents"
-    android:background="@drawable/ombre">
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
