--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -103,6 +103,7 @@
         android:layout_marginBottom="93dp"
         android:background="@drawable/rounded_button"
         android:text="VIEW EVENTS"
+        android:onClick="ViewEvents"
         android:textAlignment="center"
         android:textStyle="bold" />
 </RelativeLayout>
